<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableTint="@color/white"
            android:fontFamily="@font/pixel_font"
            android:gravity="start"
            android:onClick="phone"
            android:text="@string/Telephone"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/sms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_sms"
            android:drawableTint="@color/white"
            android:fontFamily="@font/pixel_font"
            android:gravity="start"
            android:onClick="sms"
            android:text="@string/sms"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_contacts"
            android:drawableTint="@color/white"
            android:fontFamily="@font/pixel_font"
            android:gravity="start"
            android:onClick="contacts"
            android:text="@string/contacts"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_telega"
            android:drawableTint="@color/white"
            android:fontFamily="@font/pixel_font"
            android:gravity="start"
            android:onClick="telega"
            android:text="@string/Телеграмм"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_chrome"
            android:drawableTint="@color/white"
            android:fontFamily="@font/pixel_font"
            android:gravity="start"
            android:onClick="chrome"
            android:text="@string/Chrome"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_camera"
            android:drawableTint="@color/white"
            android:fontFamily="@font/pixel_font"
            android:gravity="start"
            android:onClick="camera"
            android:text="@string/Camera"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_gallery"

            android:drawableTint="@color/white"
            android:fontFamily="@font/pixel_font"
            android:gravity="start"
            android:onClick="gallery"
            android:text="@string/gallery"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/clock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_clock"
            android:drawableTint="@color/white"
            android:fontFamily="@font/pixel_font"
            android:gravity="start"
            android:onClick="clock"
            android:text="@string/Clock"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_settings"
            android:drawableTint="@color/white"
            android:fontFamily="@font/pixel_font"
            android:gravity="start"
            android:onClick="settings"
            android:text="@string/Settings"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>

    <Button
        android:id="@+id/all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/All"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:drawableLeft="@drawable/ic_all"
        android:fontFamily="@font/pixel_font"
        android:drawableTint="@color/white"
        android:onClick="all"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/invaders" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/all"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/batteryTxt1"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:fontFamily="@font/pixel_font"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_heart_fill"
            android:backgroundTint="@color/redd"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/pixel_font"
        android:text="Сегодня"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/pixel_font"
        android:paddingHorizontal="2dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>